src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ChildNotSupported1.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<cc:Custom_Clr xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
	<DockPanel />  	
</cc:Custom_Clr>
</Page>
